objects/Initiative__c.object
<CustomObject>
    <description>An Executive Initiative Item</description>
    <fields>
        <fullName>Applicable_Year__c</fullName>
        <description>The year in which the Initiative item is applicable</description>
        <inlineHelpText>The year in which the Initiative item is applicable</inlineHelpText>
        <label>Applicable Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2015</fullName>
                    <default>true</default>
                    <label>2015</label>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Applies_in_current_year__c</fullName>
        <formula>IF(Year(TODAY() ) = VALUE(TEXT(Applicable_Year__c)),
    true,
    false
  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Applies in current year</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DeadlinesSummary__c</fullName>
        <description>Deadlines Summary Information</description>
        <label>DeadlinesSummary</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>The description of the Executive Initiative Item</description>
        <inlineHelpText>The description of the Executive Initiative Item</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Executive_Group__c</fullName>
        <description>The Executive Group to which this initiative item belongs</description>
        <inlineHelpText>The Executive Group to which this initiative item belongs</inlineHelpText>
        <label>Executive Group</label>
        <referenceTo>ExecInitiativeGroup__c</referenceTo>
        <relationshipLabel>Initiatives</relationshipLabel>
        <relationshipName>Initiatives</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Initiative_Name__c</fullName>
        <description>The name of the Initiative Item</description>
        <inlineHelpText>The name of the Initiative Item</inlineHelpText>
        <label>Initiative Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Initiative_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The business owner of the initiative item</description>
        <inlineHelpText>The business owner of the initiative item</inlineHelpText>
        <label>Initiative Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Initiatives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Initiative_Rank__c</fullName>
        <description>The rank / order of the initiative - 1 being the highest ranked</description>
        <inlineHelpText>The rank / order of the initiative - 1 being the highest ranked</inlineHelpText>
        <label>Initiative Rank</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ObjectivesSummary__c</fullName>
        <description>Objectives Summary text information</description>
        <label>ObjectivesSummary</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Overall_Status_Summary__c</fullName>
        <description>The overall summary status of the initiative</description>
        <inlineHelpText>The overall summary status of the initiative</inlineHelpText>
        <label>Overall Status Summary</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>The status of the executive initiative item</description>
        <inlineHelpText>The status of the executive initiative item</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>On-Track</fullName>
                    <color>#009900</color>
                    <default>true</default>
                    <label>On-Track</label>
                </value>
                <value>
                    <fullName>Attention Required</fullName>
                    <color>#FF6600</color>
                    <label>Attention Required</label>
                </value>
                <value>
                    <fullName>Major Deviation</fullName>
                    <color>#FF0000</color>
                    <label>Major Deviation</label>
                </value>
                <value>
                    <fullName>Complete</fullName>
                    <color>#3366FF</color>
                    <label>Complete</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Initiative</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Executive_Group__c</columns>
        <columns>NAME</columns>
        <columns>Initiative_Name__c</columns>
        <columns>Initiative_Owner__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Customer_Care</fullName>
        <columns>NAME</columns>
        <columns>Initiative_Name__c</columns>
        <columns>Initiative_Owner__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Executive_Group__c</field>
            <operation>equals</operation>
            <value>Customer Care</value>
        </filters>
        <label>Customer Care</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Professional_Services</fullName>
        <columns>NAME</columns>
        <columns>Initiative_Name__c</columns>
        <columns>Initiative_Owner__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Executive_Group__c</field>
            <operation>equals</operation>
            <value>Professional Services</value>
        </filters>
        <label>Professional Services</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>EI-{00000}</displayFormat>
        <label>Initiative ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Initiatives</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>